--- a/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
@@ -24,7 +24,6 @@
         <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="AlternateEmail" />
@@ -44,10 +43,7 @@
                 Watermark="example@gmail.com" />
 
             <Button Grid.Column="2" Command="{Binding GetResetPasswordToken}">
-                <iconPacks:PackIconMaterialDesign
-                    VerticalAlignment="Center"
-                    IsVisible="{Binding !PasswordResetForm.ShowPassword}"
-                    Kind="Send" />
+                <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordResetForm.ShowPassword}" Kind="Send" />
             </Button>
         </Grid>
 
@@ -55,7 +51,6 @@
         <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
-                    VerticalAlignment="Center"
                     Classes="size-sm"
                     IsVisible="True"
                     Kind="Key" />
@@ -68,7 +63,6 @@
         <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
-                    VerticalAlignment="Center"
                     Classes="size-sm"
                     IsVisible="True"
                     Kind="Lock" />
@@ -91,15 +85,8 @@
 
                 <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
                     <StackPanel>
-                        <iconPacks:PackIconMaterialDesign
-                            VerticalAlignment="Center"
-                            IsVisible="{Binding !PasswordResetForm.ShowPassword}"
-                            Kind="Visibility" />
-
-                        <iconPacks:PackIconMaterialDesign
-                            VerticalAlignment="Center"
-                            IsVisible="{Binding PasswordResetForm.ShowPassword}"
-                            Kind="VisibilityOff" />
+                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordResetForm.ShowPassword}" Kind="Visibility" />
+                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding PasswordResetForm.ShowPassword}" Kind="VisibilityOff" />
                     </StackPanel>
                 </Button>
             </Grid>
@@ -121,8 +108,8 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowBack" />
-                    <TextBlock VerticalAlignment="Center" Text="Go Back" />
+                    <iconPacks:PackIconMaterialDesign Kind="ArrowBack" />
+                    <TextBlock Text="Go Back" />
                 </StackPanel>
             </Button>
 
@@ -134,8 +121,8 @@
                 Command="{Binding ResetPassword}"
                 IsEnabled="{Binding PasswordResetForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Check" />
-                    <TextBlock VerticalAlignment="Center" Text="Reset" />
+                    <iconPacks:PackIconMaterialDesign Kind="Check" />
+                    <TextBlock Text="Reset" />
                 </StackPanel>
             </Button>
         </Grid>
