--- a/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
@@ -25,7 +25,6 @@
         <!--  2FA code input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="Key" />
@@ -52,8 +51,8 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowBack" />
-                    <TextBlock VerticalAlignment="Center" Text="Go Back" />
+                    <iconPacks:PackIconMaterialDesign Kind="ArrowBack" />
+                    <TextBlock Text="Go Back" />
                 </StackPanel>
             </Button>
 
@@ -64,8 +63,8 @@
                 Classes="Success"
                 Command="{Binding VerifyTwoFactorAuth}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Check" />
-                    <TextBlock VerticalAlignment="Center" Text="Verify" />
+                    <iconPacks:PackIconMaterialDesign Kind="Check" />
+                    <TextBlock Text="Verify" />
                 </StackPanel>
             </Button>
         </Grid>
