--- a/App/Voltflow/Styles/TextBlockStyle.axaml
+++ b/App/Voltflow/Styles/TextBlockStyle.axaml
@@ -21,6 +21,11 @@
         </ResourceDictionary>
     </Styles.Resources>
 
+    <!--  Default TextBlock  -->
+    <Style Selector="TextBlock">
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+
     <!--  Small TextBlock  -->
     <Style Selector="TextBlock.size-sm">
         <Setter Property="FontSize" Value="12" />
