--- a/App/Voltflow/Views/Account/Panels/SignUpPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/SignUpPanel.axaml
@@ -25,7 +25,6 @@
         <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="AlternateEmail" />
@@ -36,7 +35,6 @@
         <!--  Password input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="Lock" />
@@ -59,15 +57,8 @@
 
             <Button Grid.Column="2" Command="{Binding SignUpForm.TogglePassword}">
                 <StackPanel>
-                    <iconPacks:PackIconMaterialDesign
-                        VerticalAlignment="Center"
-                        IsVisible="{Binding !SignUpForm.ShowPassword}"
-                        Kind="Visibility" />
-
-                    <iconPacks:PackIconMaterialDesign
-                        VerticalAlignment="Center"
-                        IsVisible="{Binding SignUpForm.ShowPassword}"
-                        Kind="VisibilityOff" />
+                    <iconPacks:PackIconMaterialDesign IsVisible="{Binding !SignUpForm.ShowPassword}" Kind="Visibility" />
+                    <iconPacks:PackIconMaterialDesign IsVisible="{Binding SignUpForm.ShowPassword}" Kind="VisibilityOff" />
                 </StackPanel>
             </Button>
         </Grid>
@@ -83,7 +74,6 @@
             <StackPanel Grid.Column="0">
                 <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                     <iconPacks:PackIconMaterialDesign
-                        VerticalAlignment="Center"
                         Classes="size-sm"
                         IsVisible="True"
                         Kind="Person" />
@@ -95,7 +85,6 @@
             <StackPanel Grid.Column="2">
                 <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                     <iconPacks:PackIconMaterialDesign
-                        VerticalAlignment="Center"
                         Classes="size-sm"
                         IsVisible="True"
                         Kind="Person" />
@@ -108,7 +97,6 @@
         <!--  Phone number input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="Call" />
@@ -121,10 +109,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock
-                Grid.Column="0"
-                VerticalAlignment="Center"
-                Text="+48" />
+            <TextBlock Grid.Column="0" Text="+48" />
             <controls:NumberBox
                 Grid.Column="2"
                 MaxLength="9"
@@ -140,8 +125,8 @@
             Classes="Success"
             Command="{Binding SignUp}">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Check" />
-                <TextBlock VerticalAlignment="Center" Text="Sign Up" />
+                <iconPacks:PackIconMaterialDesign Kind="Check" />
+                <TextBlock Text="Sign Up" />
             </StackPanel>
         </Button>
 
