--- a/App/Voltflow/Views/Pages/Cars/AddCarView.axaml
+++ b/App/Voltflow/Views/Pages/Cars/AddCarView.axaml
@@ -20,7 +20,6 @@
         VerticalAlignment="Center">
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="DirectionsCar" />
@@ -30,7 +29,6 @@
 
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="Battery3Bar" />
@@ -40,7 +38,6 @@
 
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
-                VerticalAlignment="Center"
                 Classes="size-sm"
                 IsVisible="True"
                 Kind="Bolt" />
@@ -62,8 +59,8 @@
                 HorizontalAlignment="Stretch"
                 Command="{Binding GoBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="ArrowBack" />
-                    <TextBlock VerticalAlignment="Center" Text="Go Back" />
+                    <iconPacks:PackIconMaterialDesign Kind="ArrowBack" />
+                    <TextBlock Text="Go Back" />
                 </StackPanel>
             </Button>
 
@@ -73,8 +70,8 @@
                 Classes="Success"
                 Command="{Binding AddCar}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Add" />
-                    <TextBlock VerticalAlignment="Center" Text="Add Car" />
+                    <iconPacks:PackIconMaterialDesign Kind="Add" />
+                    <TextBlock Text="Add Car" />
                 </StackPanel>
             </Button>
         </Grid>
