--- a/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
@@ -22,18 +22,42 @@
 
         <Separator />
 
-        <TextBlock Classes="size-sm weight-bold" Text="Longitude" />
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconMaterialDesign
+                Classes="size-sm"
+                IsVisible="True"
+                Kind="SwapVert" />
+            <TextBlock Classes="size-sm weight-bold" Text="Longitude" />
+        </StackPanel>
         <controls:NumberBox AllowFloats="True" Text="{Binding Longitude}" />
 
-        <TextBlock Classes="size-sm weight-bold" Text="Latitude" />
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconMaterialDesign
+                Classes="size-sm"
+                IsVisible="True"
+                Kind="SwapHoriz" />
+            <TextBlock Classes="size-sm weight-bold" Text="Latitude" />
+        </StackPanel>
         <controls:NumberBox AllowFloats="True" Text="{Binding Latitude}" />
 
         <Separator />
 
-        <TextBlock Classes="size-sm weight-bold" Text="Cost" />
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconMaterialDesign
+                Classes="size-sm"
+                IsVisible="True"
+                Kind="Payment" />
+            <TextBlock Classes="size-sm weight-bold" Text="Cost" />
+        </StackPanel>
         <controls:NumberBox Text="{Binding Cost}" />
 
-        <TextBlock Classes="size-sm weight-bold" Text="Maximum Charging Rate" />
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconMaterialDesign
+                Classes="size-sm"
+                IsVisible="True"
+                Kind="Bolt" />
+            <TextBlock Classes="size-sm weight-bold" Text="Maximum Charging Rate" />
+        </StackPanel>
         <controls:NumberBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
 
         <Separator />
@@ -54,8 +78,8 @@
             Command="{Binding CreateStation}"
             IsEnabled="{Binding CreatingNewPoint}">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Add" />
-                <TextBlock VerticalAlignment="Center" Text="Add Station" />
+                <iconPacks:PackIconMaterialDesign Kind="Add" />
+                <TextBlock Text="Add Station" />
             </StackPanel>
         </Button>
 
@@ -65,8 +89,8 @@
             Command="{Binding UpdateStation}"
             IsEnabled="{Binding !CreatingNewPoint}">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Update" />
-                <TextBlock VerticalAlignment="Center" Text="Update Station" />
+                <iconPacks:PackIconMaterialDesign Kind="Update" />
+                <TextBlock Text="Update Station" />
             </StackPanel>
         </Button>
 
@@ -76,8 +100,8 @@
             Command="{Binding DeleteStation}"
             IsEnabled="{Binding !CreatingNewPoint}">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign VerticalAlignment="Center" Kind="Delete" />
-                <TextBlock VerticalAlignment="Center" Text="Delete Station" />
+                <iconPacks:PackIconMaterialDesign Kind="Delete" />
+                <TextBlock Text="Delete Station" />
             </StackPanel>
         </Button>
     </StackPanel>
