Add daily usage statistics

--- a/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
@@ -65,5 +65,7 @@
                 <TextBlock Text="Charge" />
             </StackPanel>
         </Button>
+		
+		<Button Command="{Binding NavigateStatistics}" Content="Statistics"/>
     </StackPanel>
 </UserControl>
